bluec-tests/tests/invalid/types_longdouble/bitwise_xor.c
int main(void) {
    /* It's illegal to XOR floats */
    return 1e10L ^ -1e10L;
}